[package]
name = "iota"
version = "0.1.3"
authors = ["viperscape <chrisfgill@gmail.com>"]
license = "MIT"
description = "authenticated communication, with an eye towards iot"
repository = "https://github.com/viperscape/iota"

[[bin]]
name = "iota"
path = "src/bin/main.rs"


[dependencies]
rust-crypto = "*"
clock_ticks = "*"
rand = "*"
byteorder = "*"
bitflags = "*"